@@ -11,15 +11,24 @@
     padding: 10px 20px;
 }
 
+.searchwithbtn{
+    width: 100%;
+    height: 100%;
+    padding: .5rem;
+    display: flex;
+    justify-content: space-evenly;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.200);
+}
+
 .searchTitle{
     font-size: 2rem;
 }
 
 .searchbar{
-    width: 100%;
+    width: 90%;
     border: none;
-    background: rgba(255, 255, 255, 0.200);
-    border-radius: 5px;
+    background: transparent;
     color: rgba(255, 255, 255, 0.500);
     padding: 5px 10px;
 }
@@ -27,6 +36,13 @@
 .searchbar:focus{
     border: none;
     outline: none;
+}
+
+.searchbtn{
+    background: white;
+    border: none;
+    border-radius: 5px;
+    font-weight: 600;
 }
 
 .searched{
