@@ -8,17 +8,15 @@ interface Props {
 export default async function Tmdb(props: Props) {
   const redis = new Redis({
     url: process.env.NEXT_PUBLIC_REDIS_URL as string,
-
-    token:
-      process.env.NEXT_PUBLIC_REDIS_TOKEN as string,
+    token: process.env.NEXT_PUBLIC_REDIS_TOKEN as string,
   });
 
   const cacheKey = `tmdb:${props.type}:${props.id}`;
-  const cachedData:any = await redis.get(cacheKey)
-  
-  if(cachedData){
+  const cachedData: any = await redis.get(cacheKey);
+
+  if (cachedData) {
     // console.log('Data retrieved from cache');
-    return cachedData
+    return cachedData;
   }
 
   const baseUrl = "https://api.themoviedb.org/3";
@@ -53,35 +51,8 @@ export default async function Tmdb(props: Props) {
     // console.log(combinedData)
     // console.log('data fetched from db')
 
-    await redis.set(cacheKey, JSON.stringify(combinedData))
-    return combinedData
-    // if (props.type === "tv") {
-    //   return {
-    //     id: combinedData.id,
-    //     title: combinedData.name,
-    //     episodes: combinedData.number_of_episodes,
-    //     logo: `${imageUrl}${combinedData.extra.logos[0].file_path}`,
-    //     genre: combinedData.genres[1].name,
-    //     description: combinedData.overview,
-    //     year: combinedData.first_air_date,
-    //     cover: `${imageUrl}${combinedData.extra.backdrops[0].file_path}`,
-    //     poster: `${imageUrl}${combinedData.extra.posters[0].file_path}`,
-    //     type: "tv",
-    //   };
-    // } else if (props.type === "movie") {
-    //   return {
-    //     id: combinedData.id,
-    //     title: combinedData.original_title,
-    //     logo: `${imageUrl}${combinedData.extra.logos[0].file_path}`,
-    //     genre: combinedData.genres[1].name,
-    //     description: combinedData.overview,
-    //     year: combinedData.release_date,
-    //     cover: `${imageUrl}${combinedData.extra.backdrops[0].file_path}`,
-    //     poster: `${imageUrl}${combinedData.extra.posters[0].file_path}`,
-    //     runtime: combinedData.runtime,
-    //     type: "movie",
-    //   };
-    // }
+    await redis.set(cacheKey, JSON.stringify(combinedData));
+    return combinedData;
   } catch (error) {
     console.error("Error:", error);
     throw error;
@@ -94,7 +65,13 @@ type seasondataType = {
 };
 
 export async function tmdbseasondata(props: seasondataType) {
-  const imageUrl = `https://image.tmdb.org/t/p/original`;
+  const redis = new Redis({
+    url: process.env.NEXT_PUBLIC_REDIS_URL as string,
+
+    token: process.env.NEXT_PUBLIC_REDIS_TOKEN as string,
+  });
+  
+
   const options = {
     method: "GET",
     headers: {
@@ -106,14 +83,17 @@ export async function tmdbseasondata(props: seasondataType) {
   if (props.seasonNo === "0") {
     return;
   }
+
   try {
     const request = await fetch(
       `https://api.themoviedb.org/3/tv/${props.id}/season/${props.seasonNo}`,
       options
     );
     const data = await request.json();
+
     if (data && Array.isArray(data.episodes)) {
       const episodedata = data.episodes;
+      console.log(episodedata)
       return episodedata;
     }
   } catch (error) {
